# cverl

./: .gitignore  CMakeLists.txt  Makefile  README.md
cuda/: core_algos_cuda.cu  cp_attention_cuda.cu  qwen_linear_attention_cuda.cu
docs/: backend-strategy.md  distributed-runtime.md  efficient-online-rl.md  rollout-transport.md  rollout-worker-plugin.md  sglang-rollout.md  vllm-native-rl.md  vllm-rollout.md
examples/: README.md  prepare_cifar10_hf.sh  run_cp_attention_nccl_smoke.sh  run_gsm8k_grpo_trainer_cpu.sh  run_gsm8k_grpo_trainer_cuda.sh  run_gsm8k_ppo_8gpu_h20.sh  run_h20_nccl_weight_sync.sh  run_mnist_gpu_demo.sh  run_qwen3_30b_a3b_moe_parallel_h20.sh  run_qwen3_30b_a3b_sft_pp8_h20.sh  run_qwen3_30b_a3b_sft_zero2_h20.sh  run_resnet152_cifar10_bench.sh  run_sglang_gsm8k_smoke.sh  run_sglang_gsm8k_train.sh  run_vllm_gsm8k_smoke.sh  run_vllm_gsm8k_train.sh  run_vllm_online_grpo.sh  run_vllm_static_split_4gpu_h20.sh  run_vllm_tp2_online_grpo_h20.sh
examples/bench/: cverl_gsm8k_grpo_bench.cc
examples/model/: hf_embedding_grpo_trainer.cc
examples/rollout/: gsm8k_grpo_smoke.cc  gsm8k_rollout_pipeline.cc
examples/scripts/: run_sglang_gsm8k_smoke.sh
examples/torch/: minimal_ppo_step.cc  toy_grpo_trainer.cc
include/cverl/: core_algos.h  cverl.h  hf_downloader.h  status.h  tensor.h
include/cverl/data/: hf_dataset.h
include/cverl/distributed/: collectives.h  context_parallel.h  cp_attention_cuda.h  expert_parallel.h  nccl_collectives.h  optimizer_sharding.h  parallel_ops.h  pipeline.h  topology.h  weight_sync.h
include/cverl/model/: hf_model_loader.h  qwen3_5_text.h  qwen_linear_attention_cuda.h  safetensors_writer.h
include/cverl/reward/: gsm8k.h
include/cverl/rollout/: gpu_ipc_rollout_batch.h  http_transport.h  nccl_gpu_batch_transport.h  plugin_worker.h  policy_worker.h  rollout_batch.h  shared_memory.h  shared_memory_transport.h  transport.h  worker.h
include/cverl/text/: byte_tokenizer.h  hf_bpe_tokenizer.h  tokenizer.h
include/cverl/torch/: causal_lm_policy.h  core_algos_torch.h  fp32_master_adamw.h  qwen3_5_causal_lm_policy.h  simple_grpo_trainer.h  tiny_causal_lm_policy.h  tiny_causal_policy.h
python/: cverl_vllm_bridge.cc
src/: core_algos_c_api.cc  core_algos_cpu.cc  hf_downloader.cc  status.cc
src/data/: hf_dataset.cc
src/distributed/: collectives.cc  context_parallel.cc  cp_attention_cuda_stub.cc  expert_parallel.cc  nccl_collectives.cc  optimizer_sharding.cc  parallel_ops.cc  pipeline.cc  topology.cc  weight_sync.cc
src/model/: hf_model_loader.cc  qwen3_5_text.cc  qwen_linear_attention_cuda_stub.cc  safetensors_writer.cc
src/reward/: gsm8k.cc
src/rollout/: gpu_ipc_rollout_batch.cc  http_transport.cc  nccl_gpu_batch_transport.cc  plugin_worker.cc  policy_worker.cc  rollout_batch.cc  shared_memory.cc  shared_memory_transport.cc  transport.cc  worker.cc
src/text/: byte_tokenizer.cc  hf_bpe_tokenizer.cc
src/torch/: causal_lm_policy.cc  core_algos_torch.cc  fp32_master_adamw.cc  qwen3_5_causal_lm_policy.cc  simple_grpo_trainer.cc  tiny_causal_lm_policy.cc  tiny_causal_policy.cc
tests/: test_core_algos_cpu.cc
tests/data/: test_hf_dataset.cc
tests/distributed/: test_cp_attention_cuda.cc  test_nccl_collectives.cc  test_optimizer_sharding.cc  test_parallel_ops.cc  test_topology.cc  test_weight_sync.cc
tests/model/: test_hf_model_loader.cc  test_qwen3_5_cp_forward.cc  test_qwen_linear_attention_cuda.cc  test_safetensors_writer.cc
tests/reward/: test_gsm8k_reward.cc
tests/rollout/: plugin_worker_fixture.cc  test_gpu_ipc_rollout_batch.cc  test_gsm8k_grpo_smoke.cc  test_gsm8k_grpo_trainer.cc  test_http_transport.cc  test_nccl_gpu_batch_transport.cc  test_plugin_worker.cc  test_policy_rollout_worker.cc  test_rollout_batch.cc  test_rollout_worker.cc  test_shared_memory.cc  test_shared_memory_transport.cc  test_transport.cc
tests/text/: test_byte_tokenizer.cc  test_hf_bpe_tokenizer.cc
tests/text/fixtures/qwen3_5/: fixtures.json
tests/text/fixtures/synthetic/: fixtures.json  tokenizer.json
tests/torch/: test_fp32_master_adamw.cc  test_qwen3_5_causal_lm_policy.cc  test_qwen3_5_grpo_step.cc  test_qwen3_5_param_dtype.cc  test_reference_policy_kl.cc  test_simple_grpo_trainer.cc  test_torch_backend.cc
tools/: compare_golden.cc  golden_dump.py  hf_dataset_download.py  hf_download.cc  hf_snapshot_download.py
tools/bench/: compare_gsm8k_speed.sh  export_hf_cifar10_tensors.py  qwen_multigpu_ppo_bench.sh  resnet152_cifar10_cpp_bench.cc  resnet152_cifar10_python_bench.py  verl_gsm8k_grpo_bench.py
tools/data/: hf_dataset_download.cc
tools/distributed/: cverl_parallel_plan.cc  run_nccl_gpu_batch_smoke.sh  run_nccl_smoke.sh  run_qwen_dp_tp_smoke.sh  run_qwen_multigpu_regression.sh  run_qwen_pp_tp_ppo_trainer.sh  run_qwen_pp_tp_train_smoke.sh  run_qwen_tp_smoke.sh  run_rollout_nccl_to_pp_tp_ppo.sh  run_rollout_to_pp_tp_ppo.sh
tools/model/: compare_qwen3_5_forward.py  inspect_hf_model.cc  qwen3_5_dp_tp_smoke.cc  qwen3_5_forward.cc  qwen3_5_pp_tp_ppo_trainer.cc  qwen3_5_pp_tp_train_smoke.cc  qwen3_5_tp_smoke.cc
tools/rollout/: gsm8k_grpo_smoke.cc  gsm8k_grpo_trainer.cc  nccl_rollout_batch_source.cc  vllm_native_rl_control.py  vllm_nccl_weight_sender.py  vllm_online_grpo.py  vllm_weight_manifest.cc
tools/text/: dump_hf_tokenizer_fixtures.py
tools/torch/: mnist_gpu_demo.cc
